@@ -1,6 +1,7 @@
 User johns
 Date:
 
+    Repair software decoder with vaapi vdpau backend.
     Add workaround for Intel VA-API MPEG GPU hung.
 
 User johns
